Changes for 1.0beta1:

(Patches for services and services_links required. Support for PostgreSQL)
 - added srv_status.html and services.html (Alexei)
 - added table services and services_links (Alexei)
 - support for parameter StartAgents in zabbix_agentd.conf (Alexei)
 - number of forked zabbix_trapperd decreased to 5 (Alexei)
 - number of forked zabbix_agentd decreased to 5 (Alexei)
 - support for parameter UserParameter in zabbix_agentd.conf (Alexei)
 - support for advanced zabbix_agentd.conf (Alexei)
 - added misc/conf/zabbix_agentd.conf
 - in case of network error, zabbix_suckerd will not try to request any parameters
 from the host during next 120 seconds (Alexei)
 - added directory upgrades/dbpatches/1.0alpha12_to_1.0beta1 (Alexei)
 - added column disabled_until to table hosts (Alexei)
 - modified SQL statements in both report2.html and graph2.html. Thanks
to Oliver Siegmar. (Alexei) 
 - added support of audible notification (Alexei)
 - select criteria in form "Status of Triggers". Thanks to Lauris
Stiglics. (Alexei)
 - default values for config.alert_history and config.alarm_history are set to
 one year (Alexei)
 - file COPYING changed (Alexei)
 - file INSTALL truncated (Alexei)
 - added "-lcrypto" to SNMP library detection in configure.in (Alexei)
 - additional statistics in screen "Status of Zabbix" (Alexei)
 - changes in manual.lyx (Alexei)
 - added #define <string.h> to some C sources to eliminate compiler warnings (Alexei)

Changes for 1.0alpha12:

 - cksum[/etc/inetd.conf] will not be supporter for a while (Alexei)
 - diff(0) will not be evaluated as '1' for a fresh item (Alexei)
 - not monitored hosts will not be referenced from System Map (Alexei)
 - not monitored hosts will not be shown in form Status of Triggers (Alexei)
 - in case of network error, zabbix_suckerd will not try to request same parameter
 during next 120 seconds (Alexei)
 - zabbix_trapperd will not exit after timeout (Alexei)