@@ -53,7 +53,7 @@
 	echo "<TD><b>Actions</b></TD>";                               
 	echo "</TR>";
 	$col=0;
-	for($i=0;$i<DBnum_rows($result);$i++)
+	while($row=DBfetch($result))
 	{
 		$actid=DBget_field($result,$i,0);
 		$good="OFF";
@@ -132,14 +132,12 @@
 		$sql="select i.description, h.host, i.key_ from hosts h, items i,functions f where f.triggerid=$triggerid and h.hostid=i.hostid and f.itemid=i.itemid order by i.description";
 		$result=DBselect($sql);
 		$message="<INSERT YOUR MESSAGE HERE>\n\n------Latest data------\n\n";
-		for($i=0;$i<DBnum_rows($result);$i++)
+		while($row=DBfetch($result))
+//		for($i=0;$i<DBnum_rows($result);$i++)
 		{
-			$description=DBget_field($result,$i,0);
-			$host=DBget_field($result,$i,1);
-			$key=DBget_field($result,$i,2);
-			$message=$message."$description: \{$host:$key.last(0)}  (latest value)\n";
-			$message=$message."$description: \{$host:$key.max(300)} (maximum value for last 5 min)\n";
-			$message=$message."$description: \{$host:$key.min(300)} (minimum value for last 5 min)\n\n";
+			$message=$message.$row["description"].": \{".$row["host"].":".$row["key_"].".last(0)}  (latest value)\n";
+			$message=$message.$row["description"].": \{".$row["host"].":".$row["key_"].".max(300)} (maximum value for last 5 min)\n";
+			$message=$message.$row["description"].": \{".$row["host"].":".$row["key_"].".min(300)} (minimum value for last 5 min)\n\n";
 		}
 		$message=$message."---------End--------\n";
 	}
