@@ -45,34 +45,20 @@
 	echo "<TD><FONT SIZE=+1>Message</FONT></TD>";
 	echo "</TR>";
 	$col=0;
-	for($i=0;$i<DBnum_rows($result);$i++)
+	while($row=DBfetch($result))
 	{
-		if($col==1)
-		{
-			echo "<tr bgcolor=#DDDDDD>";
-			$col=0;
-		}
-		else
-		{
-			echo "<tr bgcolor=#EEEEEE>";
-			$col=1;
-		}
-		$clock=DBget_field($result,$i,1);
-		$type=DBget_field($result,$i,2);
-		if($type=="EMAIL")
+		if($col++%2==0)	{ echo "<tr bgcolor=#DDDDDD>"; }
+		else		{ echo "<tr bgcolor=#EEEEEE>"; }
+		if($row["type"]=="EMAIL")
 		{
 			$type="E-mail";
 		}
-		$sendto=DBget_field($result,$i,3);
-		$subject=DBget_field($result,$i,4);
-		$message=DBget_field($result,$i,5);
-		$triggerid=DBget_field($result,$i,6);
 
-		echo "<TD><a href=\"alarms.html?triggerid=$triggerid\">".date("Y.M.d H:i:s",$clock)."</a></TD>";
+		echo "<TD><a href=\"alarms.html?triggerid=".$row["triggerid"]."\">".date("Y.M.d H:i:s",$row["clock"])."</a></TD>";
 		echo "<TD>$type</TD>";
-		echo "<TD>$sendto</TD>";
-		echo "<TD>$subject</TD>";
-		echo "<TD>$message</TD>";
+		echo "<TD>".$row["sendto"]."</TD>";
+		echo "<TD>".$row["subject"]."</TD>";
+		echo "<TD>".$row["message"]."</TD>";
 		echo "</TR>";
 	}
 	echo "</TABLE>";
