@@ -51,27 +51,14 @@
 	echo "<TD width=\"10%\"><b>Status</b></TD>";
 	echo "</TR>";
 	$col=0;
-	for($i=0;$i<DBnum_rows($result);$i++)
+	while($row=DBfetch($result))
 	{
-		$description=DBget_field($result,$i,0);
-		$clock=DBget_field($result,$i,1);
-		$istrue=DBget_field($result,$i,2);
-		$triggerid_=DBget_field($result,$i,3);
+		if($col++%2==0)	{ echo "<tr bgcolor=#DDDDDD>"; }
+		else		{ echo "<tr bgcolor=#EEEEEE>"; }
 
-		if($col==1)
-		{
-			echo "<tr bgcolor=#DDDDDD>";
-			$col=0;
-		}
-		else
-		{
-			echo "<tr bgcolor=#EEEEEE>";
-			$col=1;
-		}
-
-		echo "<TD>",date("Y.M.d H:i:s",$clock),"</TD>";
-		echo "<TD><a href=\"alarms.html?triggerid=$triggerid_\">$description</a></TD>";
-		if($istrue==0)
+		echo "<TD>",date("Y.M.d H:i:s",$row["clock"]),"</TD>";
+		echo "<TD><a href=\"alarms.html?triggerid=".$row["triggerid"]."\">".$row["description"]."</a></TD>";
+		if($row["istrue"] == 0)
 		{
 			echo "<TD><font color=\"00AA00\">OFF</font></TD>";
 		}
