@@ -1,6 +1,10 @@
 Changes for 1.0beta1:
+(Fix chart2.html in case of no data)
+(Add support for PostgreSQL and patches)
 
-(Patches for services and services_links required. Support for PostgreSQL)
+ - added column "soft" to services_links (Alexei)
+ - added function DBfetch to frontends/php/include/db.inc (Alexei)
+ - srv_status.html accessible without password (Alexei)
  - added srv_status.html and services.html (Alexei)
  - added table services and services_links (Alexei)
  - support for parameter StartAgents in zabbix_agentd.conf (Alexei)
